added client features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e5f8dee5",
+   "id": "70a9a83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1514e810",
+   "id": "07850c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e8b4fb49",
+   "id": "172a8514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "12ab0ba8",
+   "id": "b219203a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a8d4613a",
+   "id": "7b37e280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad70390f",
+   "id": "99a804c9",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "c1740ecd",
+   "id": "3bde8613",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "f46cc407",
+   "id": "a28ae2aa",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d98c7d",
+   "id": "109c4513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,13 +400,23 @@
     "\n",
     "balance['crncy_cd'] = balance['crncy_cd'].fillna(-2)\n",
     "balance['prod_cat_name'] = balance['prod_cat_name'].fillna('<UNK>')\n",
-    "balance['prod_group_name'] = balance['prod_group_name'].fillna('<UNK>')"
+    "balance['prod_group_name'] = balance['prod_group_name'].fillna('<UNK>')\n",
+    "\n",
+    "client = client.rename(columns={\n",
+    "    'gender': 'client_gender',\n",
+    "    'age': 'client_age',\n",
+    "    'region': 'client_region',\n",
+    "    'city': 'client_city',\n",
+    "    'citizenship': 'client_citizenship',\n",
+    "    'education': 'client_education',\n",
+    "    'job_type': 'client_job_type'\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2e3b8594",
+   "id": "1a764c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,6 +499,7 @@
     "    \n",
     "    return data\n",
     "\n",
+    "\n",
     "def create_features_balance(data):\n",
     "    data = data.copy()\n",
     "    \n",
@@ -527,6 +538,37 @@
     "    return data\n",
     "\n",
     "\n",
+    "def create_features_client(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    data = data.merge(client, on='client_id')\n",
+    "    data['match_client_region-region_cd'] = (data['client_region'] == data['region_cd']).astype(int)\n",
+    "    data.drop('client_citizenship', axis=1)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def create_features_campaigns(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def create_features_deals(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    data['number_of_deals'] = data['client_id'].map(deals.groupby('client_id')['crncy_cd'].count()).fillna(0)\n",
+    "    data['mean_deal_sum'] = data['client_id'].map(deals.groupby('client_id')['agrmnt_sum_rur'].mean()).fillna(0)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def create_features_dict_mcc(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "\n",
     "def create_features_payments(data):\n",
     "    data = data.copy()\n",
     "    \n",
@@ -536,11 +578,15 @@
     "    \n",
     "    return data\n",
     "\n",
-    "def create_features_deals(data):\n",
+    "\n",
+    "def create_features_appl(data):\n",
     "    data = data.copy()\n",
     "    \n",
-    "    data['number_of_deals'] = data['client_id'].map(deals.groupby('client_id')['crncy_cd'].count()).fillna(0)\n",
-    "    data['mean_deal_sum'] = data['client_id'].map(deals.groupby('client_id')['agrmnt_sum_rur'].mean()).fillna(0)\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def create_features_funnel(data):\n",
+    "    data = data.copy()\n",
     "    \n",
     "    return data"
    ]
@@ -548,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "a133d2eb",
+   "id": "c96697bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "594ad77e",
+   "id": "20b9476a",
    "metadata": {},
    "outputs": [
     {
@@ -579,13 +625,14 @@
     "data = create_features_transactions(data)\n",
     "data = create_features_aum(data)\n",
     "data = create_features_balance(data)\n",
+    "data = create_features_client(data)\n",
     "data = create_features_payments(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "d3fc0548",
+   "id": "bdfcad08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "ae21df03",
+   "id": "5dda8fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "0cfe38bf",
+   "id": "f13bc10f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd148a1c",
+   "id": "4953a6c9",
    "metadata": {},
    "source": [
     "## Train"
@@ -630,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "af34201f",
+   "id": "f9eb8d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "292aaa8e",
+   "id": "b2484d46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "3b0b23e2",
+   "id": "172f4161",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "0323638c",
+   "id": "2eaf8bbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "02f46dfe",
+   "id": "b1872cdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "6bc70bab",
+   "id": "ecfa964d",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "d32c1704",
+   "id": "2185d5a4",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "9724b3f8",
+   "id": "bbe07c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "07e768c6",
+   "id": "423bad25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bf463316",
+   "id": "d4f77921",
    "metadata": {},
    "outputs": [],
    "source": [
