added campaigns features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70a9a83a",
+   "id": "d65497fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "07850c1f",
+   "id": "a6571e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "172a8514",
+   "id": "2a56816e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b219203a",
+   "id": "f308f73b",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7b37e280",
+   "id": "6fc89580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a804c9",
+   "id": "c55e052b",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "3bde8613",
+   "id": "97151c31",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "a28ae2aa",
+   "id": "8f63a140",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109c4513",
+   "id": "f6b2972e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,13 +410,15 @@
     "    'citizenship': 'client_citizenship',\n",
     "    'education': 'client_education',\n",
     "    'job_type': 'client_job_type'\n",
-    "})"
+    "})\n",
+    "\n",
+    "campaigns['prod'] = campaigns['prod'].fillna('<UNK>')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1a764c1f",
+   "id": "60902835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,6 +553,29 @@
     "def create_features_campaigns(data):\n",
     "    data = data.copy()\n",
     "    \n",
+    "    data['total_campaigns'] = data['client_id'].map(campaigns.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['total_agr_flg'] = get_feature_total(campaigns, 'agr_flg')\n",
+    "    data['mean_agr_flg'] = get_feature_mean(campaigns, 'agr_flg', -1)\n",
+    "    \n",
+    "    data['total_otkaz'] = get_feature_total(campaigns, 'otkaz')\n",
+    "    data['mean_otkaz'] = get_feature_mean(campaigns, 'otkaz', -1)\n",
+    "    \n",
+    "    data['total_dumaet'] = get_feature_total(campaigns, 'dumaet')\n",
+    "    data['mean_dumaet'] = get_feature_mean(campaigns, 'dumaet', -1)\n",
+    "    \n",
+    "    data['total_ring_up_flg'] = get_feature_total(campaigns, 'ring_up_flg')\n",
+    "    data['most_common_ring_up_flg'] = get_feature_most_common(campaigns, 'ring_up_flg', -1)\n",
+    "    \n",
+    "    data['total_count_comm'] = get_feature_total(campaigns, 'count_comm')\n",
+    "    data['most_common_count_comm'] = get_feature_most_common(campaigns, 'count_comm', -1)\n",
+    "    \n",
+    "    data['total_channel'] = get_feature_total(campaigns, 'channel')\n",
+    "    data['most_common_channel'] = get_feature_most_common(campaigns, 'channel', '<unknown>')\n",
+    "    \n",
+    "    data['total_prod'] = get_feature_total(campaigns, 'prod')\n",
+    "    data['most_common_prod'] = get_feature_most_common(campaigns, 'prod', '<unknown>')\n",
+    "    \n",
     "    return data\n",
     "\n",
     "\n",
@@ -594,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "c96697bb",
+   "id": "742222f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "20b9476a",
+   "id": "ee3b6689",
    "metadata": {},
    "outputs": [
     {
@@ -626,13 +651,14 @@
     "data = create_features_aum(data)\n",
     "data = create_features_balance(data)\n",
     "data = create_features_client(data)\n",
+    "data = create_features_campaigns(data)\n",
     "data = create_features_payments(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "bdfcad08",
+   "id": "7cb2bb8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "5dda8fdc",
+   "id": "5dc419df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "f13bc10f",
+   "id": "d98f5843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4953a6c9",
+   "id": "e8232fc4",
    "metadata": {},
    "source": [
     "## Train"
@@ -677,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "f9eb8d3d",
+   "id": "1d419d0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "b2484d46",
+   "id": "5988d24b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "172f4161",
+   "id": "0a6ab8dc",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "2eaf8bbf",
+   "id": "bca5f2d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "b1872cdd",
+   "id": "fcf06521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "ecfa964d",
+   "id": "2d0463f1",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "2185d5a4",
+   "id": "3057f8fb",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "bbe07c04",
+   "id": "66efb5cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "423bad25",
+   "id": "0f287ae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d4f77921",
+   "id": "66504d3e",
    "metadata": {},
    "outputs": [],
    "source": [
