added deals features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d65497fb",
+   "id": "70110a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a6571e0c",
+   "id": "73704808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a56816e",
+   "id": "d7fd04e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f308f73b",
+   "id": "d72923f2",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6fc89580",
+   "id": "e4ca3491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55e052b",
+   "id": "5e78e359",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "97151c31",
+   "id": "5d8ba154",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "8f63a140",
+   "id": "9b9cecd8",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b2972e",
+   "id": "df2f6cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,13 +412,20 @@
     "    'job_type': 'client_job_type'\n",
     "})\n",
     "\n",
-    "campaigns['prod'] = campaigns['prod'].fillna('<UNK>')"
+    "campaigns['prod'] = campaigns['prod'].fillna('<UNK>')\n",
+    "\n",
+    "deals['crncy_cd'] = deals['crncy_cd'].fillna(-2)\n",
+    "deals['agrmnt_rate_active'] = deals['agrmnt_rate_active'].fillna(-2)\n",
+    "deals['agrmnt_rate_passive'] = deals['agrmnt_rate_passive'].fillna(-2)\n",
+    "deals['agrmnt_sum_rur'] = deals['agrmnt_sum_rur'].fillna(-2)\n",
+    "deals['prod_type_name'] = deals['prod_type_name'].fillna('<UNK>')\n",
+    "deals['argmnt_close_start_days'] = (pd.to_datetime(deals['agrmnt_close_dt']) - pd.to_datetime(deals['agrmnt_start_dt'])).dt.days.fillna(-2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "60902835",
+   "id": "768c4220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +443,14 @@
     "\n",
     "def get_feature_most_common(df, col_name, fill_na_value):\n",
     "    return data['client_id'].map(df.groupby('client_id')[col_name].agg(lambda x: scipy.stats.mode(x)[0][0])).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
+    "def get_feature_max(df, col_name, fill_na_value):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].max()).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
+    "def get_feature_min(df, col_name, fill_na_value):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].min()).fillna(fill_na_value)\n",
     "\n",
     "\n",
     "def get_feature_mean(df, col_name, fill_na_value):\n",
@@ -507,8 +522,8 @@
     "    \n",
     "    data['total_balance'] = data['client_id'].map(balance.groupby('client_id').size()).fillna(0)\n",
     "    \n",
-    "    data['total_crncy_cd'] = get_feature_total(balance, 'crncy_cd')\n",
-    "    data['most_common_crncy_cd'] = get_feature_most_common(balance, 'crncy_cd', -1)\n",
+    "    data['total_balance_crncy_cd'] = get_feature_total(balance, 'crncy_cd')\n",
+    "    data['most_common_balance_crncy_cd'] = get_feature_most_common(balance, 'crncy_cd', -1)\n",
     "    \n",
     "    data['total_eop_bal_sum_rur'] = get_feature_total(balance, 'eop_bal_sum_rur')\n",
     "    data['total_share_eop_bal_sum_rur'] = (data['total_eop_bal_sum_rur'] / data['total_balance']).fillna(0)\n",
@@ -582,8 +597,29 @@
     "def create_features_deals(data):\n",
     "    data = data.copy()\n",
     "    \n",
-    "    data['number_of_deals'] = data['client_id'].map(deals.groupby('client_id')['crncy_cd'].count()).fillna(0)\n",
-    "    data['mean_deal_sum'] = data['client_id'].map(deals.groupby('client_id')['agrmnt_sum_rur'].mean()).fillna(0)\n",
+    "    data['total_deals'] = data['client_id'].map(deals.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['total_deals_crncy_cd'] = get_feature_total(deals, 'crncy_cd')\n",
+    "    data['most_common_deals_crncy_cd'] = get_feature_most_common(deals, 'crncy_cd', -1)\n",
+    "    \n",
+    "    data['total_agrmnt_rate_active'] = get_feature_total(deals, 'agrmnt_rate_active')\n",
+    "    data['max_agrmnt_rate_active'] = get_feature_max(deals, 'agrmnt_rate_active', -1)\n",
+    "    \n",
+    "    data['total_agrmnt_rate_passive'] = get_feature_total(deals, 'agrmnt_rate_passive')\n",
+    "    data['max_agrmnt_rate_passive'] = get_feature_max(deals, 'agrmnt_rate_passive', -1)\n",
+    "    \n",
+    "    data['total_agrmnt_sum_rur'] = get_feature_total(deals, 'agrmnt_sum_rur')\n",
+    "    data['mean_agrmnt_sum_rur'] = get_feature_mean(deals, 'agrmnt_sum_rur', -1)\n",
+    "    data['std_agrmnt_sum_rur'] = get_feature_std(deals, 'agrmnt_sum_rur', -1)\n",
+    "    \n",
+    "    data['total_prod_type_name'] = get_feature_total(deals, 'prod_type_name')\n",
+    "    data['most_common_prod_type_name'] = get_feature_most_common(deals, 'prod_type_name', '<unknown>')\n",
+    "    \n",
+    "    data['total_argmnt_close_start_days'] = get_feature_total(deals, 'argmnt_close_start_days')\n",
+    "    data['max_argmnt_close_start_days'] = get_feature_max(deals, 'argmnt_close_start_days', -1)\n",
+    "    data['min_argmnt_close_start_days'] = get_feature_min(deals, 'argmnt_close_start_days', -1)\n",
+    "    data['mean_argmnt_close_start_days'] = get_feature_mean(deals, 'argmnt_close_start_days', -1)\n",
+    "    data['std_argmnt_close_start_days'] = get_feature_std(deals, 'argmnt_close_start_days', -1)\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -618,20 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "742222f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data merge\n",
-    "\n",
-    "data = funnel.merge(client, on=['client_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 201,
-   "id": "ee3b6689",
+   "id": "98a48496",
    "metadata": {},
    "outputs": [
     {
@@ -652,13 +676,17 @@
     "data = create_features_balance(data)\n",
     "data = create_features_client(data)\n",
     "data = create_features_campaigns(data)\n",
-    "data = create_features_payments(data)"
+    "data = create_features_deals(data)\n",
+    "data = create_features_dict_mcc(data)\n",
+    "data = create_features_payments(data)\n",
+    "data = create_features_appl(data)\n",
+    "data = create_features_funnel(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "7cb2bb8e",
+   "id": "d2764e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "5dc419df",
+   "id": "e169decb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "d98f5843",
+   "id": "d43faf49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8232fc4",
+   "id": "2c4861da",
    "metadata": {},
    "source": [
     "## Train"
@@ -703,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "1d419d0d",
+   "id": "1b1add91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "5988d24b",
+   "id": "75a944f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "0a6ab8dc",
+   "id": "3f085b44",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "bca5f2d8",
+   "id": "3eb09432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "fcf06521",
+   "id": "efeee9ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "2d0463f1",
+   "id": "072a7252",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "3057f8fb",
+   "id": "75785bdb",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "66efb5cb",
+   "id": "d79e41a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0f287ae3",
+   "id": "085494b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "66504d3e",
+   "id": "3fe938c8",
    "metadata": {},
    "outputs": [],
    "source": [
