added dict_mcc features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70110a73",
+   "id": "a36a4d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "73704808",
+   "id": "bcb6e99b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d7fd04e9",
+   "id": "53be64d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d72923f2",
+   "id": "2d8c5f6a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4ca3491",
+   "id": "b1f27d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e78e359",
+   "id": "ba8eaadf",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "5d8ba154",
+   "id": "90c45c35",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "9b9cecd8",
+   "id": "88441d4d",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df2f6cb2",
+   "id": "25f6f1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +397,9 @@
     "transactions['txn_city'] = transactions['txn_city'].fillna('<UNK>')\n",
     "transactions['tsp_name'] = transactions['tsp_name'].fillna('<UNK>')\n",
     "transactions['txn_comment_2'] = transactions['txn_comment_2'].fillna('<UNK>')\n",
+    "transactions.merge(dict_merchant_category_code, on='mcc_cd', how='left')\n",
+    "transactions['brs_mcc_group'] = transactions['brs_mcc_group'].fillna('<UNK>')\n",
+    "transactions['brs_mcc_subgroup'] = transactions['brs_mcc_subgroup'].fillna('<UNK>')\n",
     "\n",
     "balance['crncy_cd'] = balance['crncy_cd'].fillna(-2)\n",
     "balance['prod_cat_name'] = balance['prod_cat_name'].fillna('<UNK>')\n",
@@ -425,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "768c4220",
+   "id": "ddf0f901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,6 +501,12 @@
     "    \n",
     "    data['total_txn_comment_2'] = get_feature_total(transactions, 'txn_comment_2')\n",
     "    data['most_common_txn_comment_2'] = get_feature_most_common(transactions, 'txn_comment_2', '<unknown>')\n",
+    "    \n",
+    "    data['total_brs_mcc_group'] = get_feature_total(transactions, 'brs_mcc_group')\n",
+    "    data['most_common_brs_mcc_group'] = get_feature_most_common(transactions, 'brs_mcc_group', '<unknown>')\n",
+    "    \n",
+    "    data['total_brs_mcc_subgroup'] = get_feature_total(transactions, 'brs_mcc_subgroup')\n",
+    "    data['most_common_brs_mcc_subgroup'] = get_feature_most_common(transactions, 'brs_mcc_subgroup', '<unknown>')\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -655,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "98a48496",
+   "id": "99fa50d1",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "d2764e4a",
+   "id": "721825e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "e169decb",
+   "id": "e246514b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "d43faf49",
+   "id": "1d6345ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4861da",
+   "id": "6db5ef27",
    "metadata": {},
    "source": [
     "## Train"
@@ -731,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "1b1add91",
+   "id": "42da0d59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "75a944f6",
+   "id": "8a30587a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "3f085b44",
+   "id": "f2f0c2b4",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "3eb09432",
+   "id": "98e180a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "efeee9ea",
+   "id": "e7467202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "072a7252",
+   "id": "5ecf52fe",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "75785bdb",
+   "id": "26fca666",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "d79e41a4",
+   "id": "55fbb113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "085494b1",
+   "id": "fcf63865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3fe938c8",
+   "id": "8bce2b5d",
    "metadata": {},
    "outputs": [],
    "source": [
