--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a36a4d9a",
+   "id": "f11eb746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bcb6e99b",
+   "id": "06137b0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53be64d2",
+   "id": "82244ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d8c5f6a",
+   "id": "4ffff0e1",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b1f27d69",
+   "id": "4498709e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8eaadf",
+   "id": "f2194187",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "90c45c35",
+   "id": "6ef1094d",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "88441d4d",
+   "id": "00dad962",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f6f1d9",
+   "id": "aa4a09de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +397,7 @@
     "transactions['txn_city'] = transactions['txn_city'].fillna('<UNK>')\n",
     "transactions['tsp_name'] = transactions['tsp_name'].fillna('<UNK>')\n",
     "transactions['txn_comment_2'] = transactions['txn_comment_2'].fillna('<UNK>')\n",
+    "\n",
     "transactions.merge(dict_merchant_category_code, on='mcc_cd', how='left')\n",
     "transactions['brs_mcc_group'] = transactions['brs_mcc_group'].fillna('<UNK>')\n",
     "transactions['brs_mcc_subgroup'] = transactions['brs_mcc_subgroup'].fillna('<UNK>')\n",
@@ -422,13 +423,15 @@
     "deals['agrmnt_rate_passive'] = deals['agrmnt_rate_passive'].fillna(-2)\n",
     "deals['agrmnt_sum_rur'] = deals['agrmnt_sum_rur'].fillna(-2)\n",
     "deals['prod_type_name'] = deals['prod_type_name'].fillna('<UNK>')\n",
-    "deals['argmnt_close_start_days'] = (pd.to_datetime(deals['agrmnt_close_dt']) - pd.to_datetime(deals['agrmnt_start_dt'])).dt.days.fillna(-2)"
+    "deals['argmnt_close_start_days'] = (pd.to_datetime(deals['agrmnt_close_dt']) - pd.to_datetime(deals['agrmnt_start_dt'])).dt.days.fillna(-2)\n",
+    "\n",
+    "payments['day_dt'] = pd.to_datetime(payments['day_dt'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ddf0f901",
+   "id": "0db189c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +469,10 @@
     "\n",
     "def get_feature_max_min(df, col_name, fill_na_value):\n",
     "    return data['client_id'].map(df.groupby('client_id')[col_name].agg(lambda x: x.max() - x.min())).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
+    "def get_feature_timedelta(df, col_name):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].agg(lambda x: (x.max() - x.min()).days)).fillna(-1)\n",
     "\n",
     "\n",
     "def create_features_transactions(data):\n",
@@ -633,18 +640,24 @@
     "    return data\n",
     "\n",
     "\n",
-    "def create_features_dict_mcc(data):\n",
-    "    data = data.copy()\n",
-    "    \n",
-    "    return data\n",
-    "\n",
-    "\n",
     "def create_features_payments(data):\n",
     "    data = data.copy()\n",
+    "    \n",
+    "    data['total_payments'] = data['client_id'].map(payments.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['mean_payments_sum_rur'] = get_feature_mean(payments, 'sum_rur', -1)\n",
+    "    data['std_payments_sum_rur'] = get_feature_std(payments, 'sum_rur', -1)\n",
+    "    data['min_payments_sum_rur'] = get_feature_min(payments, 'sum_rur', -1)\n",
+    "    data['max_payments_sum_rur'] = get_feature_max(payments, 'sum_rur', -1)\n",
+    "    \n",
+    "    data['total_pmnts_name'] = get_feature_total(payments, 'pmnts_name')\n",
+    "    data['most_common_pmnts_name'] = get_feature_most_common(payments, 'pmnts_name', '<unknown>')\n",
     "    \n",
     "    # payments \n",
     "    data['last_known_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].iloc[0])).fillna(-1)\n",
     "    data['total_recieved_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].sum())).fillna(-1)\n",
+    "    \n",
+    "    data['timedelta_payments_day_dt'] = get_feature_timedelta(payments, 'day_dt')\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -664,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "99fa50d1",
+   "id": "017a5533",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "721825e9",
+   "id": "7e3572e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "e246514b",
+   "id": "248ac49c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "1d6345ad",
+   "id": "7370d127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db5ef27",
+   "id": "c727f1ba",
    "metadata": {},
    "source": [
     "## Train"
@@ -740,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "42da0d59",
+   "id": "0185f018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "8a30587a",
+   "id": "09f37f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "f2f0c2b4",
+   "id": "28a305e3",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "98e180a3",
+   "id": "ae9b02d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "e7467202",
+   "id": "e5694627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "5ecf52fe",
+   "id": "e6e18a73",
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "26fca666",
+   "id": "9b139fc9",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "55fbb113",
+   "id": "b39a8a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fcf63865",
+   "id": "3bae2d46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8bce2b5d",
+   "id": "8846f56f",
    "metadata": {},
    "outputs": [],
    "source": [
