added appl features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f11eb746",
+   "id": "7728ae85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "06137b0f",
+   "id": "c54369cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "82244ae6",
+   "id": "48649840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ffff0e1",
+   "id": "3bf00d41",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4498709e",
+   "id": "37fd6816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2194187",
+   "id": "ce0b760e",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "6ef1094d",
+   "id": "31eae23c",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "00dad962",
+   "id": "4c77c561",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4a09de",
+   "id": "26141145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,13 +425,17 @@
     "deals['prod_type_name'] = deals['prod_type_name'].fillna('<UNK>')\n",
     "deals['argmnt_close_start_days'] = (pd.to_datetime(deals['agrmnt_close_dt']) - pd.to_datetime(deals['agrmnt_start_dt'])).dt.days.fillna(-2)\n",
     "\n",
-    "payments['day_dt'] = pd.to_datetime(payments['day_dt'])"
+    "payments['day_dt'] = pd.to_datetime(payments['day_dt'])\n",
+    "\n",
+    "appl['appl_stts_name_dc'] = appl['appl_stts_name_dc'].fillna('<UNK>')\n",
+    "appl['appl_sale_channel_name'] = appl['appl_sale_channel_name'].fillna('<UNK>')\n",
+    "appl['month_end_dt'] = pd.to_datetime(appl['month_end_dt'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0db189c6",
+   "id": "61d3ee34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,8 +658,8 @@
     "    data['most_common_pmnts_name'] = get_feature_most_common(payments, 'pmnts_name', '<unknown>')\n",
     "    \n",
     "    # payments \n",
-    "    data['last_known_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].iloc[0])).fillna(-1)\n",
-    "    data['total_recieved_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].sum())).fillna(-1)\n",
+    "#     data['last_known_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].iloc[0])).fillna(-1)\n",
+    "#     data['total_recieved_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].sum())).fillna(-1)\n",
     "    \n",
     "    data['timedelta_payments_day_dt'] = get_feature_timedelta(payments, 'day_dt')\n",
     "    \n",
@@ -664,6 +668,22 @@
     "\n",
     "def create_features_appl(data):\n",
     "    data = data.copy()\n",
+    "    \n",
+    "    data['total_appl'] = data['client_id'].map(appl.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['total_appl_prod_group_name'] = get_feature_total(appl, 'appl_prod_group_name')\n",
+    "    data['most_common_appl_prod_group_name'] = get_feature_most_common(appl, 'appl_prod_group_name', '<unknown>')\n",
+    "    \n",
+    "    data['total_appl_prod_type_name'] = get_feature_total(appl, 'appl_prod_type_name')\n",
+    "    data['most_common_appl_prod_type_name'] = get_feature_most_common(appl, 'appl_prod_type_name', '<unknown>')\n",
+    "    \n",
+    "    data['total_appl_stts_name_dc'] = get_feature_total(appl, 'appl_stts_name_dc')\n",
+    "    data['most_common_appl_stts_name_dc'] = get_feature_most_common(appl, 'appl_stts_name_dc', '<unknown>')\n",
+    "    \n",
+    "    data['total_appl_sale_channel_name'] = get_feature_total(appl, 'appl_sale_channel_name')\n",
+    "    data['most_common_appl_sale_channel_name'] = get_feature_most_common(appl, 'appl_sale_channel_name', '<unknown>')\n",
+    "    \n",
+    "    data['timedelta_appl_month_end_dt'] = get_feature_timedelta(appl, 'month_end_dt')\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -677,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "017a5533",
+   "id": "044e9adb",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "7e3572e8",
+   "id": "592c7682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "248ac49c",
+   "id": "dd3c6700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "7370d127",
+   "id": "52f25558",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c727f1ba",
+   "id": "c4eeb9d8",
    "metadata": {},
    "source": [
     "## Train"
@@ -753,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "0185f018",
+   "id": "1b0306be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "09f37f6d",
+   "id": "26dbf0e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "28a305e3",
+   "id": "cf920617",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "ae9b02d0",
+   "id": "916a3427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "e5694627",
+   "id": "9283f1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "e6e18a73",
+   "id": "a6bde5b6",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "9b139fc9",
+   "id": "246521e6",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "b39a8a0f",
+   "id": "e109d127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3bae2d46",
+   "id": "9cd560fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8846f56f",
+   "id": "7be7c728",
    "metadata": {},
    "outputs": [],
    "source": [
