big feature cleaning

--- a/EDA-FE-kovalev.ipynb
+++ b/EDA-FE-kovalev.ipynb
@@ -36,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.47 s, sys: 773 ms, total: 8.24 s\n",
-      "Wall time: 10.3 s\n"
+      "CPU times: user 7.14 s, sys: 508 ms, total: 7.65 s\n",
+      "Wall time: 7.65 s\n"
      ]
     }
    ],
@@ -53,15 +53,8 @@
     "dict_merchant_category_code = pd.read_csv(INPUT_PATH / 'dict_mcc.csv')\n",
     "payments = pd.read_csv(INPUT_PATH / 'payments.csv')\n",
     "funnel = pd.read_csv(INPUT_PATH / 'funnel.csv')\n",
-    "appl = pd.read_csv(INPUT_PATH / 'appl.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "appl = pd.read_csv(INPUT_PATH / 'appl.csv')\n",
+    "\n",
     "data = funnel.copy()"
    ]
   },
